--- a/src/app/_components/about/about.component.scss
+++ b/src/app/_components/about/about.component.scss
@@ -158,6 +158,19 @@
     }
   }
 
+
+  .iframe {
+    background: url('../../../assets/images/no-image-iframe.png') center center no-repeat;
+    width: 432px;
+    height: 242px;
+    margin-bottom: 6px;
+  }
+
+  .mat-divider {
+    width: 432px;
+    margin-bottom: 12px;
+  }
+
   .black {
     padding: 0 24px 24px 0;
 
