--- a/src/app/_components/more-details/more-details.component.scss
+++ b/src/app/_components/more-details/more-details.component.scss
@@ -4,7 +4,7 @@
   background-color: white;
   color: black;
   border-radius: 4px;
-  padding: 16px;
+  padding: 10px 12px;
   width: 350px;
 
   top: 80px;
@@ -42,7 +42,7 @@
   
   .synopsis {
     font-family: 'Hind Madurai', sans-serif;
-    margin-bottom: 0;
+    margin-bottom: -2px;
   }
 
 }
