--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -54,6 +54,10 @@
 
 .genres, .categories {
 
+  .mat-checkbox {
+    margin-left: 24px;
+  }
+
   .mat-raised-button {
     margin-left: 10px;
   }
