chore: added link to media in characters

--- a/src/app/_components/character/character.component.html
+++ b/src/app/_components/character/character.component.html
@@ -208,6 +208,7 @@
 
       <div class="action">
         <button mat-stroked-button (click)="route = previous">Back to previous</button>
+        <button mat-stroked-button (click)="selectMedia(selectedMedia)">Select media</button>
       </div>
 
     </div>
