--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -3,21 +3,22 @@
   
   <p>Contact Us</p>
 
-  <div>
+  <form (ngSubmit)="submit()" [formGroup]="form">
+  
     <mat-form-field color="accent" appearance="outline">
       <mat-label>Email</mat-label>
-      <input matInput type="email" autocomplete="off" [(ngModel)]="email" #_email="ngModel">
+      <input matInput type="email" autocomplete="off" formControlName="email">
     </mat-form-field>
-  </div>
-
-  <div>
+    
     <mat-form-field color="accent" appearance="outline">
       <mat-label>Message</mat-label>
-      <textarea matInput type="text" rows="20" maxlength="900" [(ngModel)]="message" #_message="ngModel"></textarea>
-      <mat-hint *ngIf="message.length > 0" align="end">{{ message.length }}/900</mat-hint>
+      <textarea matInput type="text" rows="20" maxlength="900"  formControlName="message" #message></textarea>
+      <mat-hint *ngIf="form.value.message.length > 0" align="end">{{ form.value.message.length }}/900</mat-hint>
     </mat-form-field>
-  </div>
-  
-  <button mat-raised-button (click)="submit()">Submit</button>
+
+    <button mat-raised-button type="submit">Submit</button>
+
+  </form>
+
 
 </div>
