--- a/src/app/_components/footer/footer.component.html
+++ b/src/app/_components/footer/footer.component.html
@@ -24,8 +24,7 @@
       <div>
         <p class="entry" routerLink="/about">About</p>
         <p class="entry" routerLink="/contact">Contact us</p>
-        <p class="entry">Report issues</p>
-        <!-- <p class="entry" routerLink="/report-issue">Report issues</p> -->
+        <p class="entry" routerLink="/feedback">Feedback</p>
       </div>
     </div>
     
