--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,8 +1,10 @@
 
-<div class="wrap content">
-
-  <p class="head">About</p>
-
-  <p class="body">Hi guest, Welcome to Anime Select.</p>
+<div class="content">
+  <div class="wrap">
   
+    <p class="head">About</p>
+  
+    <p class="body">Hi guest, Welcome to Anime Select.</p>
+    
+  </div>
 </div>
