--- a/src/app/about-us/about-us.component.scss
+++ b/src/app/about-us/about-us.component.scss
@@ -1,10 +1,15 @@
 
-.head {
-  font-family: 'Rubik', sans-serif;
-  font-size: 3em;
-  margin: 60px 0 40px 0;
-}
-
-.body {
-  font-size: 1.1em;
+.content {
+  position: absolute;
+  width: 100vw;
+  
+  .head {
+    font-family: 'Rubik', sans-serif;
+    font-size: 3em;
+    margin: 60px 0 40px 0;
+  }
+  
+  .body {
+    font-size: 1.1em;
+  }
 }
